Intercept sun.awt.shell.Win32ShellFolderManager2.compareShellFolders(). It incorrectly handles some cases where only one of the folders being compared is special.